Adding a extra reset css file.

--- a/personal/index.html
+++ b/personal/index.html
@@ -3,7 +3,88 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="stylesheet" href="reset1.css" />
+    <link rel="stylesheet" href="styles.css" />
+    <title>Porfolio | fminor</title>
   </head>
-  <body></body>
+  <body>
+    <div>
+      <header>
+        <!-- Use the header area for the website logo -->
+        <h1>Logo</h1>
+      </header>
+      <nav>
+        <!-- Use the nav area to add hyperlinks to other pages within the website -->
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="">Resume</a></li>
+          <li><a href="">Contact</a></li>
+        </ul>
+      </nav>
+      <main>
+        <section>
+          <!-- Use the section area to add content withing the website -->
+          <h3>Hi my name is</h3>
+          <h1>Name</h1>
+          <p>
+            Hello! I am a dedicated technology enthusiast. I am starting a new
+            journey and I would like to have the opportunity to extend my early
+            knowledge in something awesome.
+          </p>
+          <p>
+            Hi, I lived in the States for 20 years. I did diverse kind of jobs
+            during those years, but I was able to gain different kind of
+            experiences and knowledge. I had to return to my home country almost
+            five years ago. For the last four years I worked as a desktop
+            support technician but I decided to switch careers. The last four
+            years before I returned I was able to finish my bachelors degree in
+            Computer Technology Systems.
+          </p>
+          <p>
+            I will be happy to stablish new opportunities in this new journey.
+          </p>
+        </section>
+      </main>
+      <div>
+        <section>
+          <h1>My Stacks!</h1>
+          <ul>
+            <li>HTML5</li>
+            <li>CSS</li>
+            <li>Javascript</li>
+            <!-- <li>*** Typescript</li> -->
+            <li>Git and Github</li>
+            <li>MySQL</li>
+            <!-- <li>Inkscape</li> -->
+            <!-- <li>*** Scrum</li> -->
+            <!-- <li>*** AWS</li> -->
+          </ul>
+        </section>
+        <section>
+          <h1>Projects</h1>
+          <p>Comming soon!</p>
+        </section>
+        <section>
+          <form id="form">
+            <!-- Starting the form -->
+            <fieldset>
+              <legend>Contact Me!</legend>
+              <label for="name">Name</label>
+              <input name="custName" id="name" type="text" />
+              <label for="mail">Email</label>
+              <input name="custEmail" id="mail" type="email" />
+              <label for="message">Message</label>
+              <textarea name="custMessage" id="message"></textarea>
+              <input value="Submit" type="submit" id="submit" />
+            </fieldset>
+          </form>
+        </section>
+      </div>
+      <footer>
+        <!-- Use the footer area to add webpage footer content -->
+        <p>Copyright &#169; 2023 &#9475; Name</p>
+        <p>Instagram &#9475; Github &#9475; Linked</p>
+      </footer>
+    </div>
+  </body>
 </html>
