Adding styles for semantic elements.

--- a/personal/index.html
+++ b/personal/index.html
@@ -27,36 +27,36 @@
           <h3>Hi my name is</h3>
           <h1>Name</h1>
           <p>
-            Hello! I am a dedicated technology enthusiast. I am starting a new
-            journey and I would like to have the opportunity to extend my early
-            knowledge in something awesome.
+            Hello! I am Fernando, a dedicated technology enthusiast. I am
+            starting a new journey and would like to have the opportunity to
+            extend my early knowledge into something awesome.
           </p>
           <p>
-            Hi, I lived in the States for 20 years. I did diverse kind of jobs
-            during those years, but I was able to gain different kind of
-            experiences and knowledge. I had to return to my home country almost
+            I lived in the United States for 20 years. I worked diverse jobs
+            during those years,allowing me to have well rounded experiences and
+            gain different kinds of knowledge. I also earned my bachelor's
+            degree in Computer Technology and Information Systems during the
+            last four years I was abroad. I returned to my home country almost
             five years ago. For the last four years I worked as a desktop
-            support technician but I decided to switch careers. The last four
-            years before I returned I was able to finish my bachelors degree in
-            Computer Technology Systems.
+            support technician but I decided to switch careers.
           </p>
           <p>
-            I will be happy to stablish new opportunities in this new journey.
+            I will be happy to establish new opportunities in this new journey.
           </p>
         </section>
       </main>
       <div>
-        <section>
+        <section id="stacks">
           <h1>My Stacks!</h1>
           <ul>
             <li>HTML5</li>
             <li>CSS</li>
             <li>Javascript</li>
-            <!-- <li>*** Typescript</li> -->
             <li>Git and Github</li>
             <li>MySQL</li>
-            <!-- <li>Inkscape</li> -->
+            <!-- <li>*** Typescript</li> -->
             <!-- <li>*** Scrum</li> -->
+            <!-- <li>Inkscape</li> -->
             <!-- <li>*** AWS</li> -->
           </ul>
         </section>
@@ -68,10 +68,11 @@
           <form id="form">
             <!-- Starting the form -->
             <fieldset>
-              <legend>Contact Me!</legend>
-              <label for="name">Name</label>
+              <h1>Contact Me!</h1>
+              <p>I am open to opportunities.</p>
+              <label for="name">Your Name</label>
               <input name="custName" id="name" type="text" />
-              <label for="mail">Email</label>
+              <label for="mail">Your Email</label>
               <input name="custEmail" id="mail" type="email" />
               <label for="message">Message</label>
               <textarea name="custMessage" id="message"></textarea>
@@ -82,8 +83,8 @@
       </div>
       <footer>
         <!-- Use the footer area to add webpage footer content -->
+        <p>Instagram &#9475; Github &#9475; Linkedin</p>
         <p>Copyright &#169; 2023 &#9475; Name</p>
-        <p>Instagram &#9475; Github &#9475; Linked</p>
       </footer>
     </div>
   </body>
