--- a/personal/index.html
+++ b/personal/index.html
@@ -8,7 +8,7 @@
     <title>Porfolio | fminor</title>
   </head>
   <body>
-    <div>
+    <div id="container">
       <header>
         <!-- Use the header area for the website logo -->
         <h1>Logo</h1>
@@ -21,17 +21,17 @@
           <li><a href="">Contact</a></li>
         </ul>
       </nav>
-      <main>
-        <section>
+      <div id="parent">
+        <main id="intro">
           <!-- Use the section area to add content withing the website -->
-          <h3>Hi my name is</h3>
-          <h1>Name</h1>
+          <h1>Hi my name is</h1>
+          <h1 id="name">Name</h1>
           <p>
             Hello! I am Fernando, a dedicated technology enthusiast. I am
             starting a new journey and would like to have the opportunity to
             extend my early knowledge into something awesome.
           </p>
-          <p>
+          <!-- <p>
             I lived in the United States for 20 years. I worked diverse jobs
             during those years,allowing me to have well rounded experiences and
             gain different kinds of knowledge. I also earned my bachelor's
@@ -42,48 +42,53 @@
           </p>
           <p>
             I will be happy to establish new opportunities in this new journey.
-          </p>
-        </section>
-      </main>
-      <div>
-        <section id="stacks">
-          <h1>My Stacks!</h1>
-          <ul>
-            <li>HTML5</li>
-            <li>CSS</li>
-            <li>Javascript</li>
-            <li>Git and Github</li>
-            <li>MySQL</li>
-            <!-- <li>*** Typescript</li> -->
-            <!-- <li>*** Scrum</li> -->
-            <!-- <li>Inkscape</li> -->
-            <!-- <li>*** AWS</li> -->
-          </ul>
-        </section>
-        <section>
-          <h1>Projects</h1>
-          <p>Comming soon!</p>
-        </section>
-        <section>
-          <form id="form">
-            <!-- Starting the form -->
-            <fieldset>
-              <h1>Contact Me!</h1>
-              <p>I am open to opportunities.</p>
-              <label for="name">Your Name</label>
-              <input name="custName" id="name" type="text" />
-              <label for="mail">Your Email</label>
-              <input name="custEmail" id="mail" type="email" />
-              <label for="message">Message</label>
-              <textarea name="custMessage" id="message"></textarea>
-              <input value="Submit" type="submit" id="submit" />
-            </fieldset>
-          </form>
-        </section>
+          </p> -->
+        </main>
+        <div id="image">Image</div>
       </div>
+      <section id="stacks">
+        <h1>My Stacks!</h1>
+        <ul>
+          <li>HTML5</li>
+          <li>CSS</li>
+          <li>Javascript</li>
+          <li>Git and Github</li>
+          <li>MySQL</li>
+          <!-- <li>*** Typescript</li> -->
+          <!-- <li>*** Scrum</li> -->
+          <!-- <li>Inkscape</li> -->
+          <!-- <li>*** AWS</li> -->
+        </ul>
+      </section>
+      <section id="projects">
+        <h1>Projects</h1>
+        <p>Comming soon!</p>
+      </section>
+      <section id="contact">
+        <form id="form">
+          <!-- Starting the form -->
+          <fieldset>
+            <h1>Contact Me!</h1>
+            <p>I am open to opportunities.</p>
+            <label for="name">Your Name</label>
+            <input name="custName" id="name" type="text" />
+            <label for="mail">Your Email</label>
+            <input name="custEmail" id="mail" type="email" />
+            <label for="message">Message</label>
+            <textarea name="custMessage" id="message"></textarea>
+            <input value="Submit" type="submit" id="submit" />
+          </fieldset>
+        </form>
+      </section>
       <footer>
         <!-- Use the footer area to add webpage footer content -->
-        <p>Instagram &#9475; Github &#9475; Linkedin</p>
+        <p>
+          <a href="https://www.linkedin.com">Linkedin</a>
+          &#9475;
+          <a href="https://www.github.com">Github</a>
+          &#9475;
+          <a href="https://www.instagram.com">Instagram</a>
+        </p>
         <p>Copyright &#169; 2023 &#9475; Name</p>
       </footer>
     </div>
